mcp-v2-template/k8s/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcp-hello-world
  labels:
    app: mcp-hello-world
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: mcp-hello-world
    weight: 100
  wildcardPolicy: None
